<resources>
    <string name="app_name">Buy Now v1</string>
    <string name="app_logo">app_logo</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="i_m_an_admin">I\'m an Admin?</string>
    <string name="find_discover_choose_and_buy_anything_online">Find, Discover, Choose and Buy anything online.</string>
    <string name="create_account">Create account</string>
    <string name="user_name">User Name</string>
    <string name="address">Address</string>
    <string name="welcome_home_activiy">Welcome Home Activiy</string>
    <string name="dont_have_account_register">Don\'t have an Account? Register</string>
    <string name="login_admin">Login Admin</string>
    <string name="add_new_product">Add New Product</string>
    <string name="todo">TODO</string>
    <string name="enter_product_name">Product Name…</string>
    <string name="enter_product_description">Product Description…</string>
    <string name="enter_product_price">Product Price…</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
    <string name="join_now">Join Now</string>
    <string name="add_product">Add product</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_Name">User name</string>
    <string name="logout">Logout</string>
    <string name="setting">Settings</string>
    <string name="categories">Categories</string>
    <string name="orders">Orders</string>
    <string name="cart">Cart</string>

</resources>