<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Shared.MainActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/app_logo_cpl"
        android:contentDescription="@string/app_logo" />

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="92dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/find_discover_choose_and_buy_anything_online"
        android:textColor="@color/Coral"
        android:textSize="22sp"
        android:textStyle="italic|bold"
        />

    <Button
        android:id="@+id/main_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:backgroundTint="@color/IndianRed"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:text="@string/already_have_an_account_login"
        android:textColor="@color/white"
        />
    <Button
        android:id="@+id/main_join_now_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_login_btn"
        android:backgroundTint="@color/BurlyWood"
        android:padding="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/join_now"
        android:textStyle="bold"
        android:textColor="@color/white"
        />
</RelativeLayout>